# rootdb

./: .gitignore  .travis.yml  README.md  configure.ac
src/: Makefile.am  main.c  main.h  rootdb.c  rootdb.h
test/: Makefile.am  check_rootdb.c  tests.c
